Add FEED view feature
