# docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/feed": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "stories"
                 ],
@@ -538,9 +543,22 @@
                     "type": "string"
                 },
                 "visibility": {
-                    "type": "string"
+                    "$ref": "#/definitions/types.Visibility"
                 }
             }
+        },
+        "types.Visibility": {
+            "type": "string",
+            "enum": [
+                "public",
+                "friends",
+                "private"
+            ],
+            "x-enum-varnames": [
+                "VisibilityPublic",
+                "VisibilityFriends",
+                "VisibilityPrivate"
+            ]
         },
         "users.SignInRequest": {
             "type": "object",
